rows with cond formats don't have empty background, fdo#54661, fdo#52535

Change-Id: Iecab7e80c533caa4e36b6d2534d8446c0329fecd